# duckdb-tinyorm-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
duckdb_tinyorm_py/: __init__.py  migration.py  repository.py
tests/: manual_test.py  test_duckdb_compatibility.py  test_example.py
