[metadata]
name = duckdb-tinyorm-py
version = 0.1.0
description = A tiny ORM for DuckDB
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/duckdb-tinyorm-py
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    duckdb
    sqlalchemy

[options.packages.find]
where = duckdb_tinyorm_py
exclude =
    tests*